--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Adding for Microsoft Face API from sample -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <title>React App</title>
   </head>
   <body>
